# garmin-font-scaler

./: .gitignore  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  tests.yml
src/garmin_font_scaler/: __init__.py  cli.py  core.py
tests/: test_integration.py  test_performance.py  test_unit.py
