[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "garmin-font-scaler"
version = "0.2.3"
description = "Automated font scaling and generation for Garmin Connect IQ watch faces"
readme = "README.md"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/yourusername/garmin-font-scaler"

[project.scripts]
garmin-font-scaler = "garmin_font_scaler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]